            Fixed: OSDMenuGetW() and OSDMenuPutS() could not handle all sizes of the standard fonts (new: use size + 0xB for bold fonts)
            Added: OSDMenuGetH() to get a string's height
            Added: OSDMenuGetW(), OSDMenuGetH() and OSDMenuPutS() made public (i.e. part of the API)
            Fixed: OSDDrawList() limited the width of the name even without value arrows and a value itself
            Fixed: OSDDrawScrollBar() didn't take into account the different number of lines of the two OSDMenuDisplayModes
            Added: OSDMenuItemModifyNameColor() to change the color of the name separately from the color of the item line
            Added: OSDMenuItemModifyValueLeftArrowGap() to be able to control the distance between name and value
            Added: OSDMenuSetMemo() to be able to initialize and control an OSDMemo from scratch
            Added: OMDM_Text - an OSDMemo that won't scoll beyond its last line
            Modified: OSDMenuSetMemo() can either set OMDM_Memo or OMDM_Text now
            Added: OSDMenuSetLineHeight() and enums tLineHeight to allow for a different number of lines
            Added: OSDMenuGetNrOfLines() to query the current number of lines
            Fixed: The ScrollBar graphics contained various pixels with slightly wrong color
            Added: New cursor graphics that are necessary for different line heights (i.e. different number of lines)
            Fixed: OSDMenuSetCursor() doesn't draw the new cursor
            Added: OSDMemoFormatText() to allow a dynamic change of the font size (i.e. the number of lines)
            Added: TMSOSDMenu memo demo
            Modified: TMSOSDMenu menu demo demonstrates dynamic change of both the font size (i.e. the number of lines) and the cursor type
            Modified: Replace the previous WaitSpinner with one that (unlike a circular one) looks undistorted on the 5:4 OSD
            Modified: Release date