@@ -1101,3 +1101,4 @@ The following functions accept any form a path. The INI and language INI functio
             Modified: TMSOSDMenu menu demo demonstrates dynamic change of both the font size (i.e. the number of lines) and the cursor type
             Modified: Replace the previous WaitSpinner with one that (unlike a circular one) looks undistorted on the 5:4 OSD
             Modified: Release date
+2019-09-26  Fixed: Potential out-of-bounds read in StringEndsWith()
